--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "type": "commonjs",
   "scripts": {
     "build": "rimraf ./build && tsc",
-    "prestart": "npm run build",
-    "start:dev": "npx nodemon",
-    "start": "npm run build && node build/index.js"
+    "start": "node build/index.js",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon dist/index.js\"",
+    "push": "git add . && git commit -m 'Minor update' && git push"
   },
   "keywords": [],
   "author": "",
@@ -29,6 +29,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.14.10",
+    "concurrently": "^8.2.2",
     "nodemon": "^3.1.4",
     "rimraf": "^5.0.7",
     "ts-node": "^10.9.2"
