--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "rimraf ./build && tsc",
     "start": "node build/index.js",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon dist/index.js\"",
-    "push": "git add . && git commit -m 'Minor update' && git push"
+    "push": "powershell -Command \"git add .; if ($?) { git commit -m 'Minor update'; if ($?) { git push } }\""
   },
   "keywords": [],
   "author": "",
