--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "node build/index.js",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon dist/index.js\"",
     "push": "powershell -Command \"git add .; if ($?) { git commit -m 'Minor update'; if ($?) { git push } }\"",
-    "push:unix" : "git add . && git commit -m 'Minor update' && git push"
+    "push:unix": "git add . && git commit -m 'Minor update' && git push"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.5",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "typescript": "^5.5.3"
   },
   "devDependencies": {
@@ -30,6 +31,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.14.10",
     "concurrently": "^8.2.2",
     "nodemon": "^3.1.4",
